@@ -7,7 +7,7 @@
 
     <groupId>com.azure</groupId>
     <artifactId>azure-monitor-ingestion</artifactId>
-    <version>1.2.0-beta.1</version> <!-- {x-version-update;com.azure:azure-monitor-ingestion;current} -->
+    <version>1.3.0-beta.1</version> <!-- {x-version-update;com.azure:azure-monitor-ingestion;current} -->
 
     <packaging>jar</packaging>
     <name>Microsoft Azure SDK for Azure Monitor Data Ingestion</name>
@@ -50,6 +50,8 @@
             --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
             --add-exports com.azure.monitor.ingestion/com.azure.monitor.ingestion.implementation=ALL-UNNAMED
             --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion=ALL-UNNAMED
+            --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion=com.fasterxml.jackson.databind
+            --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion.implementation=com.fasterxml.jackson.databind
         </javaModulesSurefireArgLine>
     </properties>
 
@@ -64,13 +66,18 @@
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-core</artifactId>
-            <version>1.47.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
+            <version>1.50.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-core-http-netty</artifactId>
-            <version>1.14.1</version> <!-- {x-version-update;com.azure:azure-core-http-netty;dependency} -->
+            <version>1.15.2</version> <!-- {x-version-update;com.azure:azure-core-http-netty;dependency} -->
         </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-json</artifactId>
+        <version>1.1.0</version> <!-- {x-version-update;com.azure:azure-json;dependency} -->
+      </dependency>
 
         <!-- test -->
         <dependency>
@@ -92,21 +99,21 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.azure</groupId>
-            <artifactId>azure-core-test</artifactId>
-            <version>1.24.0</version> <!-- {x-version-update;com.azure:azure-core-test;dependency} -->
-            <scope>test</scope>
+          <groupId>com.azure</groupId>
+          <artifactId>azure-core-test</artifactId>
+          <version>1.26.1</version> <!-- {x-version-update;com.azure:azure-core-test;dependency} -->
+          <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
-            <version>3.4.34</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
+            <version>3.4.38</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-identity</artifactId>
-            <version>1.11.4</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
+            <version>1.13.1</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
             <scope>test</scope>
         </dependency>
     </dependencies>
